--- a/mobile/ios-tiles-edited.css
+++ b/mobile/ios-tiles-edited.css
@@ -664,11 +664,11 @@ border-bottom: .2rem solid #ffffff;}
 
 /* --------------- Review Page --------------- */
 .vvp-tab-content>* {
-  margin: 5px 2 !important;
+  margin: 0px 0 !important;
 }
 /* Makes the pagination buttons lower */
 .a-text-center[role="navigation"] {
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 /* Makes "Awaiting Review" and "Reviewed" in the Center */
 .vvp-items-button-and-search-container {
@@ -808,6 +808,12 @@ border-bottom: .2rem solid #ffffff;}
 /* Reviews Page */
     /* Changing Header color for dark mode */
     .vvp-tab-content .vvp-reviews-table--heading-top {
-      background-color: var(--dark-cutoff-background-color);  
+      background-color: var(--dark-cutoff-background-color) !important;  
+    }
+
+/* Orders Page */
+    /* Changing Header color for dark mode */
+    .vvp-tab-content .vvp-orders-table--heading-top {
+      background-color: var(--dark-cutoff-background-color) !important;
     }
 }
