Update Product / Account Page + more | v1.1.6.1
# Fixing small errors in  v1.1.6.1 

# New Edits |  v1.1.6
- Fixes Account Page, for dark mode, and sizing 
- Adjusted Drop-Down sizing, as error may occur if more than couple options available (may need to tweak again in future)

# v1.1.5
- Updated Product Details page, for dark mode

- Updates the Drop-Down sizing, shows at the bottom and sized better. Reflect Dark Mode colors 

- Fixes the Product Detail footer for light mode. Prev footer did not have background color

- Added "Limited Quantity" text to the top, if exists

--- a/mobile/ios-tiles-edited.css
+++ b/mobile/ios-tiles-edited.css
@@ -727,7 +727,7 @@ border-bottom: .2rem solid #ffffff;}
 }
 /* Changes the Bold Strings to Gold color */
 .vvp-account-box strong {
-  color: #e0b500;
+  color: #e0b500 !important;
 }  
 
 /* Fixes the Account Page sizing */
@@ -934,11 +934,12 @@ border-bottom: .2rem solid #ffffff;}
       background-color: var(--dark-cutoff-background-color) !important;
     }
 
+
 /* Account Page */
   .a-box.a-color-alternate-background, .a-box.a-color-offset-background {
     background-color: var(--dark-cutoff-background-color) !important;
     }
   .grey-text {
-    color: var(--dark-text-color);
+    color: var(--dark-text-color) !important;
   }
 }
